# micro-policies-coq

./: .dir-locals.el  .gitignore  .gitmodules  LICENSE  Makefile  Makefile.source  README  README.md  _CoqProject
cfi/: abstract.v  cfi.v  cfi_preservation.v  cfi_refinement.v  cfi_refinementAS.v  cfi_rules.v  classes.v  concrete.v  concrete_cfi.v  concrete_kernel.v  fault_handler_spec.v  main.v  preservation.v  preservation2.v  preservationAS.v  property.v  qa.v  refinementAQ.v  refinementAS.v  refinementSC.v  refinementac.v  review.org  rules.v  symbolic.v
common/: common.v  printing.v  segment.v  types.v
compartmentalization/: abstract.v  common.v  isolate_sets.v  main.v  ranges.v  refinementSA.v  symbolic.v
concrete/: common.v  concrete.v  eval.v  evaltest.v  exec.v  execb.v  int_32.v
coq/: .gitignore
extraction/: extraction.v
extraction/postprocess/: LICENSE  Makefile  README-ICU-MAC.txt  postprocess.cabal
extraction/postprocess/src/: Main.hs  Postprocess.hs
extraction/postprocess/src/Postprocess/: Clean.hs  Constraints.hs  FileStructure.hs  Imports.hs  Processor.hs
extraction/postprocess/src/Postprocess/Util/: Monoid.hs
ifc/: abstract.v  common.v  labels.v  noninterference.v  noninterferenceS.v  refinementSA.v  symbolic.v
lib/: Coqlib.v  FiniteMaps.v  Integers.v  Maps.v  alist.v  fmap_utils.v  haskell_notation.v  hlist.v  hseq_utils.v  list_utils.v  ordered.v  partial_maps.v  partmap_utils.v  set_utils.v  ssr_list_utils.v  ssr_set_utils.v  utils.v  word_utils.v
memory_safety/: abstract.v  classes.v  executable.v  fault_handler_spec.v  main.v  (+8 more)
(+133 files in other folders)
